[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tda-ppin"
version = "0.1.0"
description = "Reproducible exploratory research workflows for persistent homology on protein-protein interaction networks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gudhi==3.8.0",
  "matplotlib>=3.8,<4",
  "networkx==3.2",
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "persim==0.3.2",
  "ripser==0.6.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
